--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,14 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Home</title>
-		<link rel = "stylesheet" href ="css/bootstrap-theme.min.css">
-		<link rel = "stylesheet" href ="css/bootstrap.min.css">
-		<link rel = "stylesheet" type ="text/css" href ="css/style.css"/>
-		<script type="text/javascript" src="js/angular.js"></script>
-		<script type="text/javascript" src="js/angular-animate.js"></script>
-		<script type="text/javascript" src="js/angular-route.js"></script>
-		<script type="text/javascript" src="js/angular-sanitize.min.js"></script>
-		<script type="text/javascript" src="js/angular-resource.min.js"></script>
+		<link rel = "stylesheet" href ="css\bootstrap-theme.min.css">
+		<link rel = "stylesheet" href ="css\bootstrap.min.css">
+		<link rel = "stylesheet" type ="text/css" href ="css\style.css"/>
+		<script type="text/javascript" src="js\angular.js"></script>
+		<script type="text/javascript" src="js\angular-animate.js"></script>
+		<script type="text/javascript" src="js\angular-route.js"></script>
+		<script type="text/javascript" src="js\angular-sanitize.min.js"></script>
+		<script type="text/javascript" src="js\angular-resource.min.js"></script>
 	</head>
 	<body>
 		<!-- Header -->
